name alignment fixed 3

--- a/styles.css
+++ b/styles.css
@@ -285,7 +285,7 @@
     max-width: 1100px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(17em, 1fr));
     grid-gap: 2em;
   }
   
